--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Official repo of boilerplate systems",
   "main": "index.js",
   "scripts": {
+    "app": "node app.js",
     "build": "node build.js",
     "test": "echo 'test'"
   },
